# ai-shifu

./: .gitignore  .pre-commit-config.yaml  =23.2.3 to match lockfile (25.x) and unblock npm ci in CI  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEX.md  INSTALL_MANUAL.md  README.md  README_ZH-CN.md  SKILL.md  fix_1538.py  lefthook.yml  package.json  tasks.md
.codex-local/: operator-management-optimization-plan.md  operator-task-priority-roadmap.md  需求和优化.md
.github/: AGENTS.md  copilot-instructions.md
deploy/: DEPLOY.md
docker/: .env.example  .env.example.full  .env.example.minimal  AGENTS.md  MYSQL_CONFIG.md  SQL_CONFIG_COMMANDS.sql  SQL_MODE_EXPLANATION.md  build-cook-web.sh  dev_in_docker.sh  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.latest.yml  docker-compose.yml  nginx.conf
docs/: QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  admin-time-display.md  audio-visual-sync-design.md  bill-prefix-migration-squash.md  billing-branch-cleanup.md  billing-credit-notifications-technical-design.md  billing-credit-notifications.md  billing-credit-precision-config.md  billing-pingxx-subscription-renewal.md  billing-refactor-plan.md  billing-rollout-runbook.md  billing-subscription-design.md  billing-subscription-purchase-sms.md  billing-usage-single-ledger-entry-design.md  endpoint-audit.md  engineering-baseline.md  i18n-key-standard.md  i18n-migration-playbook.md  learn-generated-elements-design.md  (+28 more)
src/mcp-server/: README.md  pyproject.toml
src/mcp-server/src/ai_shifu_mcp/: __init__.py  __main__.py  api_client.py  server.py
(+2071 files in other folders)
