[project]
name = "ai-shifu-mcp"
version = "0.1.0"
description = "MCP server for AI-Shifu course management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ai-shifu-mcp = "ai_shifu_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_shifu_mcp"]
